# playground

./: .gitignore  .gitmodules  LICENSE  README.md
Algorithmic Toolbox/week1_programming_challenges/2_maximum_pairwise_product/: max_pairwise_product.cpp
Algorithmic Toolbox/week2_algorithmic_warmup/1_fibonacci_number/: fibonacci.cpp
Algorithmic Toolbox/week2_algorithmic_warmup/2_last_digit_of_fibonacci_number/: fibonacci_last_digit.cpp
Algorithmic Toolbox/week2_algorithmic_warmup/3_greatest_common_divisor/: gcd.cpp
Algorithmic Toolbox/week2_algorithmic_warmup/4_least_common_multiple/: lcm.cpp
Algorithmic Toolbox/week2_algorithmic_warmup/5_fibonacci_number_again/: fibonacci_huge.cpp
Algorithmic Toolbox/week2_algorithmic_warmup/6_last_digit_of_the_sum_of_fibonacci_numbers/: fibonacci_sum_last_digit.cpp
Algorithmic Toolbox/week2_algorithmic_warmup/7_last_digit_of_the_sum_of_fibonacci_numbers_again/: fibonacci_partial_sum.cpp
Algorithmic Toolbox/week2_algorithmic_warmup/8_last_digit_of_the_sum_of_squares_of_fibonacci_numbers/: fibonacci_sum_squares.cpp
Algorithmic Toolbox/week3_greedy_algorithms/1_money_change/: change.cpp
Algorithmic Toolbox/week3_greedy_algorithms/2_maximum_value_of_the_loot/: fractional_knapsack.cpp
Algorithmic Toolbox/week3_greedy_algorithms/3_car_fueling/: car_fueling.cpp
Algorithmic Toolbox/week3_greedy_algorithms/4_maximum_advertisement_revenue/: dot_product.cpp
Algorithmic Toolbox/week3_greedy_algorithms/5_collecting_signatures/: covering_segments.cpp
Algorithmic Toolbox/week3_greedy_algorithms/6_maximum_number_of_prizes/: different_summands.cpp
Algorithmic Toolbox/week3_greedy_algorithms/7_maximum_salary/: largest_number.cpp
Android/FuckXTU/: README.md
Android/FuckXTU/app/: build.gradle
Android/Weather/: README.md
Android/Weather/app/: build.gradle
Android/jni/app/: build.gradle
Arduino/The Starter Kit/project_05_mood_cue/: project_05_mood_cue.ino
Arduino/The Starter Kit/project_06_light_theremin/: project_06_light_theremin.ino
Arduino/The Starter Kit/project_07_keyboard_instrument/: project_07_keyboard_instrument.ino
Arduino/The Starter Kit/project_08_digital_hourglass/: project_08_digital_hourglass.ino
Arduino/The Starter Kit/project_09_motorized_pinwheel/: project_09_motorized_pinwheel.ino
Arduino/The Starter Kit/project_10_zoetrope/: project_10_zoetrope.ino
Arduino/The Starter Kit/project_11_crystal_ball/: project_11_crystal_ball.ino
Arduino/The Starter Kit/project_12_knock_lock/: project_12_knock_lock.ino
Arduino/The Starter Kit/project_13_touchy_feely_lamp/: project_13_touchy_feely_lamp.ino
Arduino/The Starter Kit/project_14_tweak_the_arduino_logo/: project_14_tweak_the_arduino_logo.ino
CC2530/: .gitignore
CC2530/Interrupt/: Interrupt.ewp  main.cpp
CC2530/Interrupt/settings/: Interrupt.dnx
CC2530/Key/: Key.ewp  main.cpp
CC2530/Key/settings/: Key.dnx
CC2530/LED/: LED.ewp  main.cpp
CC2530/UART/: UART.ewp  main.cpp
CS/cache/: README.md  double_thread_add.cpp  single_thread_add.cpp
Graphics/yuv/: split_yuv.cpp
KiCad/: KiCad.kicad_prl  KiCad.kicad_pro  fp-info-cache  fp-lib-table  sym-lib-table
OpenGL/: build.gradle
OpenGL/app/: build.gradle
PHP/: xtu
Vulkan/app/: CMakeLists.txt  build.gradle
cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.h  config.h.in  install_manifest.txt  main.cc
cmake/math/: CMakeLists.txt  Makefile  cmake_install.cmake  math.cc
cplusplus/: extern.cc  hello_world.cc  init_var.cc  tpl.cc
cplusplus/chapter1_2/: pi.h  var_reference.cc  var_scope.cc
cplusplus/chapter3/: array.cc  string.cc  vector.cc
cpp/chapter1/: identifier.cc
cpp/chapter3/: iterator.cc  namespace.cc  pointer.cc
cpp/chapter4/: cast.cc
cpp/chapter6/: 6_21.cpp  6_25.cpp  6_27.cpp  6_2_1.cc  6_54.cpp
cpp/chapter7/: 7_27.cpp  7_31.h  7_9.cpp  Person.h  Sales_data.cpp  Sales_data.h  Screen.h  Window_mgr.h
csapp/: CMakeLists.txt  fork  fork.c  showbytes.c  showbytes.h  template.c
csapp/Test/: CMakeLists.txt  main.cpp
csapp/Tiny/: CMakeLists.txt  Makefile  README.md  http.c  http.h  io.c  io.h  main.c  tiny  tiny.c  tiny.h
csapp/Tiny/cgi-bin/: Makefile  index  index.c
csapp/Tiny/errors/: 404.html  500.html
csapp/Tiny/www/: index.html
csapp/chapter11/: client.c  dd2hex.c  hex2dd.c  hostinfo.c  server.c
csapp/chapter12/: pool  pool.c  pool.h  select  select.c  semaphore  semaphore.c  sharing  sharing.c  thread  thread.c
iOS/HypnoNerd/: LRDReminderViewController.xib
leetcode/binary_tree/: 101.symmetric-tree.cpp  110.balanced-banary-tree.cpp  199.binary-tree-right-side-view.cpp  2415.reverse-odd-levers-of-binary-tree.cpp  266.invert-binary-tree.cpp  897.increasing-order-search-tree.cpp  94.binary-tree-inorder-traversal.cpp  98.validate-binary-serarch-tree.cpp
leetcode/string/: 20.valid-parentheses.cpp
nand2tetris/: .gitignore
nand2tetris/01/: And.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Or8Way.hdl  Xor.hdl
nand2tetris/02/: ALU.hdl  FullAdder.hdl  Negative16.hdl  Or16Way.hdl
nand2tetris/05/: CPU.hdl  Computer.hdl  Memory.hdl
nand2tetris/06/: .gitignore  assemble_all.sh
vulkan/android_sample/app/: CMakeLists.txt  build.gradle
vulkan/android_sample/app/src/androidTest/java/com/linroid/sample/: ExampleInstrumentedTest.kt
vulkan/android_sample/app/src/main/: AndroidManifest.xml
vulkan/android_sample/app/src/main/cpp/: android_main.cpp  vulkan_sample.cpp  vulkan_sample.h
vulkan/android_sample/app/src/main/cpp/vulkan_wrapper/: android_util.cpp  android_util.h
vulkan/android_sample/app/src/main/java/com/linroid/vulkan/sample/: MainActivity.kt
vulkan/android_sample/app/src/main/shaders/: triangle.frag  triangle.vert
vulkan/vulkan_android/: local.properties
(+293 files in other folders)
